--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,9 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "cstring": "cpp",
+        "set": "cpp",
+        "fstream": "cpp"
     }
 }
